# ariitk_best_practices

./: .clang-format  .gitignore  README.md
.github/workflows/: main.yml
BENCHMARKS/: BENCHMARKING.md  RESULTS.md
BENCHMARKS/ORB_feature_detector_algorithm/: ORB_feature.py  ORB_feature_detector_algorithm.md
install/: install_https.rosinstall  install_ssh.rosinstall
lib_package_template/: CMakeLists.txt  package.xml
lib_package_template/include/lib_package_template/: template.hpp
lib_package_template/src/: template.cpp
lib_package_template/test/src/: template_test.cpp
msg_package_template/: CMakeLists.txt  package.xml
msg_package_template/msg/: ModelCoefficients.msg  Template.msg
msg_package_template/srv/: TemplateService.srv
pcl_ransac/: CMakeLists.txt  package.xml
pcl_ransac/include/pcl_ransac/: pcl_ransac.hpp
pcl_ransac/src/: pcl_ransac.cpp
pcl_ransac/test/src/: pcl_ransac_test.cpp
pcl_ransac_msgs/: CMakeLists.txt  package.xml
pcl_ransac_msgs/msg/: CloudModel.msg
pcl_ransac_ros/: CMakeLists.txt  package.xml
pcl_ransac_ros/include/pcl_ransac_ros/: PointCloudPublisher.hpp  cloud_model_fit.hpp  point_cloud_pub.hpp
pcl_ransac_ros/launch/: default.launch  pcl_ransac.launch
pcl_ransac_ros/src/: cloud_model_fit.cpp  pcl_ransac_ros_node.cpp  point_cloud_pub.cpp
ros_package_template/: CMakeLists.txt  package.xml
ros_package_template/cfg/: template.yaml
ros_package_template/include/ros_package_template/: template_ros.hpp  template_ros_pub.hpp
ros_package_template/launch/: template.launch
ros_package_template/rviz/: template.rviz
ros_package_template/src/: template_ros.cpp  template_ros_node.cpp  template_ros_pub.cpp
